--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -40,7 +40,7 @@
   }
 } */
 
-/* make a common button  section */
+/* make a common button section */
 .testbutton:hover {
   color: #14396A !important;
   background: #468CCF;
@@ -108,8 +108,6 @@ p {
 
 }
 
-
-
 * {
   margin: 0%;
   padding: 0%;
@@ -124,26 +122,27 @@ body {
 
 }
 
-/* make a css for navbar logo  */
-.navbar-brand {
+/* NAVBAR */
+
+/* .navbar-brand {
   width: 94px;
   height: 74px;
-}
+} */
 
-.dropdowan-coustom {
+.dropdown-custom {
   z-index: 99;
 }
 
-.navbar {
-  overflow: hidden;
+.custom-navbar {
+  /* overflow: hidden; */
   color: rgba(255, 255, 255, 0.7);
-  background-color: #ffffff;
+  background-color: var(--color-white);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
   backdrop-filter: blur(4px);
   /* border-radius: 50px 200px 50px 200px;  */
-  border-radius: 200px 50px;
-  margin-top: 22px;
-  margin-left: 15px;
-  margin-right: 15px;
+  /* border-radius: 200px 50px; */
+  border-radius: 0px 50px 0px 50px;
+  margin: 20px 15px 0px 15px;
 }
 
 .nav-item a {
@@ -152,14 +151,13 @@ body {
   font-family: var(--font-family);
   line-height: 20.14px;
   color: #17305e;
-
 }
 
 .nav-link {
   position: relative;
 }
 
-.nav-link::after {
+/* .nav-link::after {
   content: "";
   position: absolute;
   bottom: 0;
@@ -168,23 +166,35 @@ body {
   height: 2px;
   background-color: var(--color-navy-blue);
   transition: width 0.3s ease-in-out;
-}
+} */
 
-.nav-link:hover::after {
+/* .nav-link:hover::after {
   width: 100%;
-}
+} */
 
 @media (max-width:768px) {
-  .navbar-brand {
+  /* .navbar-brand {
     padding-left: 90px;
   }
 
   .navbar-collapse {
     padding-right: 100px;
+  } */
+
+  .navbar-collapse {
+    text-align: center;
   }
 }
 
-/* make a carousel section  */
+@media (max-width:992px) {
+  .custom-navbar {
+    border-radius: 0px 0px 0px 0px;
+    margin: 0px 0px 0px 0px;
+  }
+}
+
+/* CAROUSEL */
+
 .carousel-item {
   position: relative;
   /* height: 100vh; */
@@ -1081,10 +1091,6 @@ body {
   .counter-numbers {
     top: 0;
     padding: 30px;
-  }
-
-  .navbar-collapse {
-    text-align: center;
   }
 
   .carousel-caption h1 {
