--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -962,7 +962,8 @@ a.dropdown-item:focus {
       rgba(180, 213, 255, 1) 0%,
       rgba(255, 193, 131, 1) 49.93%,
       rgba(255, 224, 193, 1) 100%),
-    url(/assets/images/home-page-images/reach-out-to-us/image%2012.png);
+    /* url(/assets/images/home-page-images/reach-out-to-us/image%2012.png); */
+    url(../images/home-page-images/reach-out-to-us/image\ 12.png);
   background-size: cover;
   background-blend-mode: overlay;
   background-attachment: fixed;
@@ -1130,6 +1131,42 @@ a.dropdown-item:focus {
     padding: 30px;
   }
 }
+
+.social-icon {
+  text-decoration: none;
+}
+
+.footer-icon-container {
+  display: flex;
+  /* justify-content: center; */
+  /* gap: 5px; */
+  padding: 18px 0px 0px 0px;
+}
+
+.footer-icon-container i {
+  font-size: 20px;
+  color: var(--color-white);
+  /* background-color: red; */
+  border-radius: 50%;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* transition: background-color 0.3s ease, color 0.3s ease; */
+}
+
+/* .footer-icon-container i:hover {
+  color: var(--high-dark-color);
+  background-color: var(--white);
+  cursor: pointer;
+} */
+
+/* @media (min-width: 769px) {
+  .footer-icon-container {
+      justify-content: flex-start;
+      padding: 0px;
+  }
+} */
 
 /* Styles for mobile and tablets slider */
 
