--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -85,20 +85,20 @@
     width: 75%;
 } */
 
-@media (max-width: 768px) {
-    /* .about-page-tab-section-content {
+/* @media (max-width: 768px) {
+    .about-page-tab-section-content {
         flex-direction: column;
-    } */
+    }
 
-    /* .about-page-tab-section-image {
+    .about-page-tab-section-image {
         width: 100%;
         margin: 0 0 10px 0;
-    } */
+    }
 
-    /* .about-page-tab-section-content p {
+    .about-page-tab-section-content p {
         width: 100%;
-    } */
-}
+    }
+} */
 
 /* LEADERSHIP SECTION */
 
@@ -157,13 +157,13 @@
     /* padding: 30px 0; */
 }
 
-@media (max-width: 768px) {
-    /* .strategic-framework { */
-        /* transform: translateY(-400px);  */
-        /* padding: 30px 0; */
-        /* padding-top: 40px; */
-    /* } */
-}
+/* @media (max-width: 768px) {
+    .strategic-framework {
+        transform: translateY(-400px); 
+        padding: 30px 0;
+        padding-top: 40px;
+    }
+} */
 
 .img-fluid-stratagic {
     max-width: 100%;
@@ -195,29 +195,30 @@
     width: 34vw;
 } */
 
-@media (max-width: 430px) {
-    /* .img-fluid-partner {
+/* @media (max-width: 430px) {
+    .img-fluid-partner {
         width: 100vw;
         padding-left: 35px;
-    } */
-}
+    }
+} */
 
-@media (max-width: 768px) {
-    /* .img-fluid-partner {
+/* @media (max-width: 768px) {
+    .img-fluid-partner {
         width: 70vw;
-    } */
-}
+    }
+} */
 
-@media (max-width:820px) {
-    /* .img-fluid-partner {
+/* @media (max-width:820px) {
+    .img-fluid-partner {
         width: 80vw;
-    } */
-}
+    }
+} */
 
 /* CORPORATE ORGANOGRAM SECTION */
 
 .corporate-organogram {
-    background: url(/assets/images/about-page/Corporate-Organogram/Rectangle\ 36.png);
+    /* background: url(/assets/images/about-page/Corporate-Organogram/Rectangle\ 36.png); */
+    background: url(../images/about-page/Corporate-Organogram/Rectangle\ 36.png);
     /* height: 45vh; */
     /* padding-top: 2rem; */
     background-image: cover;
@@ -240,9 +241,10 @@
         height: 50vh !important;
     } */
 
-    .leadership {
+    /* ENABLE THE BOTTOM ONE IF ANY PROBLEM ARISE */
+    /* .leadership {
         height: 130vh;
-    }
+    } */
 
     /* .img-fluid-partner {
         width: 100%;
