--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1549,6 +1549,35 @@ h6 {
     fill: var(--color-light-peach);
 }
 
+/* BACK TO TOP */
+
+#backToTopBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+    z-index: 2000;
+    border: none;
+    outline: none;
+    background-color: var(--color-orange);
+    color: var(--color-white);
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 50%;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+#backToTopBtn:hover {
+    background-color: var(--color-orange);
+}
+
+#backToTopBtn>.material-symbols-outlined {
+    font-size: 3rem;
+    transform: translateX(-14px) translateY(-14px);
+}
+
 /* EXTRAS */
 
 .justified-text {
