--- a/assets/css/products.css
+++ b/assets/css/products.css
@@ -51,3 +51,39 @@
     flex-direction: column !important;
   }
 }
+
+/* CONNECTING BOXES */
+
+/* .connecting-box {
+  width: 50px;
+  height: 50px;
+  top: 50%;
+  background-color: var(--color-orange);
+  margin-right: 10px;
+  position: relative;
+} */
+
+/* .connecting-box::after {
+  content: "";
+  width: 2px;
+  height: 100%;
+  background-color: var(--color-orange);
+  position: absolute;
+  top: 12px;
+  left: 50%;
+} */
+
+/* @media (max-width: 768px) {
+  .connecting-box {
+    margin-bottom: 10px;
+    margin-right: 0;
+  }
+
+  .connecting-box::after {
+    width: 100%;
+    height: 2px;
+    top: auto;
+    left: 0;
+    bottom: -10px;
+  }
+} */
