--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -35,6 +35,7 @@
 
 .about-page-tab-section-tabs {
     display: flex;
+    overflow: hidden;
     justify-content: space-between;
     background-color: var(--color-navy-blue);
 }
@@ -228,7 +229,6 @@
     position: relative;
     transition: all 0.7s linear;
     opacity: 0.9;
-
     background-repeat: no-repeat;
     background-attachment: scroll;
     /* background-position: top center; */
