--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,7 @@
     --color-white-translucent: rgba(255, 255, 255, 0.7);
     --color-white-transparent: rgba(255, 255, 255, 0.25);
     --color-navy-blue: #17305e;
+    --color-light-blue: #00a3d4ff;
     --color-black-transparent-gradient: linear-gradient(to top, black, transparent);
     --color-light-peach: #ffe0c1;
     --color-light-pink: #ffebef;
@@ -1526,6 +1527,37 @@ h6 {
     }
 }
 
+/* Increase font sizes for large screens */
+@media (min-width: 1400px) {
+    h1 {
+        font-size: 4rem;
+    }
+
+    h2 {
+        font-size: 3.5rem;
+    }
+
+    h3 {
+        font-size: 3rem;
+    }
+
+    h4 {
+        font-size: 2.5rem;
+    }
+
+    h5 {
+        font-size: 2rem;
+    }
+
+    h6 {
+        font-size: 1.75rem;
+    }
+
+    p {
+        font-size: 1.2rem !important;
+    }
+}
+
 /* CUSTOM SHAPE DIVIDER */
 
 .custom-shape-divider-bottom-1726045077 {
@@ -1535,7 +1567,7 @@ h6 {
     width: 100%;
     overflow: hidden;
     line-height: 0;
-    transform: rotate(180deg);
+    transform: rotate(180deg) translateY(-1px);
 }
 
 .custom-shape-divider-bottom-1726045077 svg {
@@ -1608,4 +1640,8 @@ h6 {
     display: flex;
     justify-content: space-around;
     width: 100%;
+}
+
+.heavy-font {
+    font-weight: 600;
 }
