--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -25,21 +25,6 @@
   padding: 3rem 0;
 }
 
-/* .banner-animation {
-  width: 34vw;
-  animation: waveAnim 2s linear infinite alternate;
-} */
-
-/* @keyframes waveAnim {
-  0% {
-    transform: translate(0, 0) rotate(1deg);
-  }
-
-  100% {
-    transform: translate(15px, 15px) rotate(1deg);
-  }
-} */
-
 .testbutton:hover {
   color: #14396A !important;
   background: #468CCF;
@@ -565,10 +550,10 @@ a.dropdown-item:hover {
   font-size: 14px;
 }
 
-.container {
+/* .container {
   max-width: 1200px;
   width: 95%;
-}
+} */
 
 .slider-wrapper {
   position: relative;
@@ -714,8 +699,8 @@ a.dropdown-item:hover {
 }
 
 .box-our-skill {
-  height: 192px;
-  width: 100%;
+  /* height: 192px; */
+  /* width: 100%; */
   margin-bottom: 20px;
 }
 
@@ -852,17 +837,24 @@ a.dropdown-item:hover {
 }
 
 .box-services {
+  min-height: 300px;
   text-align: center;
   padding: 20px;
-  background: #f9f9f9;
+  background: var(--color-white);
   border-radius: 10px;
-  transition: transform 0.3s;
+  cursor: pointer;
+  /* transition: transform 0.3s; */
+}
+
+@media (max-width: 768px) {
+  .box-services {
+    min-height: 270px;
+  }
 }
 
 .box-services img {
   width: 40px;
   margin-bottom: 20px;
-
   /* height: 38px; */
   /* width: 38px; */
 }
@@ -877,9 +869,9 @@ a.dropdown-item:hover {
   color: #666;
 }
 
-.box-services:hover {
+/* .box-services:hover {
   transform: translateY(-10px);
-}
+} */
 
 /* TRADING PORTFOLIO */
 
@@ -1076,19 +1068,19 @@ a.dropdown-item:hover {
 }
 
 .btn-reach {
-  border-radius: 8px;
-  /* width: 172px; */
-  /* height: 44px; */
-  /* padding: 12px 40px; */
+  /* border-radius: 8px;
   background-color: var(--color-orange);
   border: none;
   color: var(--color-white);
   text-align: center;
   display: inline-block;
-  cursor: pointer;
-  /* font-size: 18px; */
-  /* line-height: 15px; */
-  /* border-color: var(--color-orange); */
+  cursor: pointer; */
+
+  font-weight: 500;
+  color: var(--color-white);
+  background-color: var(--color-orange);
+  border-radius: 5px;
+  border: none;
 }
 
 /* FOOTER */
@@ -1136,12 +1128,12 @@ a.dropdown-item:hover {
   border-top: 1px solid var(--color-white);
 }
 
-.footer-p-content {
+/* .footer-p-content {
   margin-top: 2rem;
-}
+} */
 
 .copyright-text {
-  font-size: 0.9rem;
+  font-size: 0.8rem;
 }
 
 /* RESPONSIVE */
@@ -1306,9 +1298,9 @@ a.dropdown-item:hover {
 /* Overflow in mobile view 375px to 430px */
 
 @media (max-width: 490px) {
-  .skill-icon {
+  /* .skill-icon {
     padding-left: 40px;
-  }
+  } */
 
   .content-our-skill {
     padding-right: 10px;
