--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1610,6 +1610,31 @@ h6 {
     transform: translateX(-14px) translateY(-14px);
 }
 
+/* SWIPER */
+
+.swiper-wrapper {
+    height: 100% !important;
+}
+
+.swiper {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 /* EXTRAS */
 
 .justified-text {
