--- a/assets/css/our-services.css
+++ b/assets/css/our-services.css
@@ -84,27 +84,12 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 40px;
-  /* margin-top: 50px; */
 }
 
 @media (max-width:768px) {
   .box-area {
     margin-top: 50px;
   }
-}
-
-.box-job {
-  border-radius: 10px;
-  position: relative;
-  overflow: hidden;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
-}
-
-.box-job img {
-  width: 100%;
-  border-radius: 10px;
-  display: block;
-  transition: transform 0.5s;
 }
 
 .overlay {
@@ -128,7 +113,8 @@
 
 @media (max-width: 768px) {
   .overlay {
-    height: 160%;
+    /* height: 160%; */
+    height: 170%;
   }
 }
 
@@ -141,9 +127,34 @@
   color: white;
 }
 
+@media (min-width: 992px) {
+  .overlay h3 {
+    font-size: 24px !important;
+    margin-top: 75%;
+  }
+
+  .overlay p {
+    font-size: 1rem !important;
+  }
+}
+
 .overlay p {
   color: beige;
   /* margin-bottom: 120px; */
+}
+
+.box-job {
+  border-radius: 10px;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
+}
+
+.box-job img {
+  width: 100%;
+  border-radius: 10px;
+  display: block;
+  transition: transform 0.5s;
 }
 
 .box-job:hover img {
@@ -153,6 +164,19 @@
 .box-job:hover .overlay {
   /* height: 100%; */
   height: 160%;
+}
+
+@media (max-width: 768px) {
+  .box-job {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 1/1;
+  }
+
+  .box-job img {
+    height: 100%;
+    object-fit: cover;
+  }
 }
 
 /* CLIENT-SUCCESS-STORIES */
@@ -292,8 +316,8 @@
   }
 
   .faq-img {
-    /* text-align: center; */
-    display: none;
+    text-align: center;
+    /* display: none; */
   }
 
   /* .client-img img {
@@ -303,4 +327,30 @@
   /* .client-success-stories-text {
     margin-bottom: 30px;
   } */
+}
+
+.faq-container {
+  background-color: var(--color-faq-background);
+}
+
+.faq-tab {
+  background-color: transparent !important;
+  border-top: none !important;
+  border-right: none !important;
+  border-left: none !important;
+  border-bottom: 1.4px solid var(--color-black) !important;
+  border-radius: 0px !important;
+}
+
+.accordion-button {
+  background-color: transparent !important;
+}
+
+.accordion-button:focus,
+.accordion-button.focus,
+.accordion-button:active,
+.accordion-button.active {
+  outline: none !important;
+  box-shadow: none !important;
+  color: var(--color-black) !important;
 }
