--- a/assets/css/products.css
+++ b/assets/css/products.css
@@ -14,18 +14,18 @@
 } */
 
 .card-product {
-  /* max-width: 100px; */
   padding-bottom: 20px;
   color: var(--color-navy-blue);
+
+  /* ADDED LATER */
+  overflow: hidden !important;
+  /* position: relative; */
 }
 
 .card-img-top {
   height: 200px !important;
   object-fit: cover;
-  /* border-radius: 8px 8px 0px 0px !important; */
   transition: 0.35s ease;
-  /* Added later */
-  /* transform: scale(1.02); */
 }
 
 .card-img-top:hover {
