--- a/assets/css/products.css
+++ b/assets/css/products.css
@@ -18,18 +18,24 @@
   color: var(--color-navy-blue);
 
   /* ADDED LATER */
-  overflow: hidden !important;
-  /* position: relative; */
+  /* overflow: hidden;
+  position: relative; */
+}
+
+.img-container-no-overflow {
+  overflow: hidden;
+  position: relative;
 }
 
 .card-img-top {
   height: 200px !important;
+  /* width: auto; */
   object-fit: cover;
-  transition: 0.35s ease;
+  transition: 0.5s ease;
 }
 
 .card-img-top:hover {
-  transform: scale(1.02);
+  transform: scale(1.05);
   cursor: pointer;
 }
 
